// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render Skill with only a title 1`] = `
<div
  className="skill"
>
  <div
    className="skill__title"
  >
    Title!
  </div>
</div>
`;

exports[`Render Skill with title and bits 1`] = `
<div
  className="skill"
>
  <div
    className="skill__title"
  >
    Title!
  </div>
  <div
    className="skill__bits"
  >
    <ul>
      <p
        key="bit1"
      >
        bit1
      </p>
      <li
        key="bitlist1"
      >
        bitlist1
      </li>
      <li
        key="bitlist2"
      >
        bitlist2
      </li>
    </ul>
    <p
      key="bit2"
    >
      bit2
    </p>
    <p
      key="bit3"
    >
      bit3
    </p>
  </div>
</div>
`;

exports[`Render Skill with title and description 1`] = `
<div
  className="skill"
>
  <div
    className="skill__title"
  >
    Title!
  </div>
  <div
    className="skill__description"
  >
    Description!
  </div>
</div>
`;

exports[`Render Skill with title, bits and description 1`] = `
<div
  className="skill"
>
  <div
    className="skill__title"
  >
    Title!
  </div>
  <div
    className="skill__bits"
  >
    <ul>
      <p
        key="bit1"
      >
        bit1
      </p>
      <li
        key="bitlist4"
      >
        bitlist4
      </li>
      <li
        key="bitlist5"
      >
        bitlist5
      </li>
    </ul>
    <p
      key="bit2"
    >
      bit2
    </p>
    <p
      key="bit3"
    >
      bit3
    </p>
  </div>
  <div
    className="skill__description"
  >
    Description!
  </div>
</div>
`;
